[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/parity-bridges-common.git"
license = "GPL-3.0-only"

[workspace]
resolver = "2"
members = [
	"relay-clients/client-asset-hub-rococo",
	"relay-clients/client-asset-hub-westend",
	"relay-clients/client-bridge-hub-kusama",
	"relay-clients/client-bridge-hub-polkadot",
	"relay-clients/client-bridge-hub-rococo",
	"relay-clients/client-bridge-hub-westend",
	"relay-clients/client-kusama",
	"relay-clients/client-polkadot",
	"relay-clients/client-polkadot-bulletin",
	"relay-clients/client-rococo",
	"relay-clients/client-westend",
	"chains/chain-bridge-hub-polkadot",
	"chains/chain-bridge-hub-kusama",
	"chains/chain-polkadot",
	"chains/chain-kusama",
	"substrate-relay",
]

# Setup clippy lints as `polkadot-sdk`,
# but let's better be strict here and disable what `polkadot-sdk` allows :)

[workspace.lints.rust]
# suspicious_double_ref_op = { level = "allow", priority = 2 }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
correctness = { level = "deny", priority = 1 }
#if-same-then-else = { level = "allow", priority = 2 }
complexity = { level = "deny", priority = 1 }
#zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000
#type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
#nonminimal-bool = { level = "allow", priority = 2 }                  # maybe
#borrowed-box = { level = "allow", priority = 2 }                     # Reasonable to fix this one
#too-many-arguments = { level = "allow", priority = 2 }               # (Turning this on would lead to)
#unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
#identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
#useless_conversion = { level = "allow", priority = 2 }               # Types may change
#unit_arg = { level = "allow", priority = 2 }                         # styalistic.
#option-map-unit-fn = { level = "allow", priority = 2 }               # styalistic
#bind_instead_of_map = { level = "allow", priority = 2 }              # styalistic
#erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
#eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
#while_immutable_condition = { level = "allow", priority = 2 }        # false positives
#needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
#derivable_impls = { level = "allow", priority = 2 }                  # false positives
#stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
#extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
#default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic

[workspace.dependencies]
log = { version = "0.4.28", default-features = false }
quote = { version = "1.0.42" }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.138", default-features = false }
thiserror = { version = "1.0.69" }
clap = { version = "4.5.3", features = ["derive", "cargo"] }
codec = { package = "parity-scale-codec", version = "3.7.4", features = ["derive"] }
color-eyre = "0.6.1"
indoc = "2.0.5"
prettyplease = "0.2.20"
proc-macro2 = "1.0.103"
subxt-codegen = { version = "0.38.0" }
subxt-utils-fetchmetadata = { version = "0.38.0", features = ["url"] }
wasm-loader = { git = "https://github.com/chevdor/subwasm", branch = "master" }
wasm-testbed = { git = "https://github.com/chevdor/subwasm", branch = "master" }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
subxt = { version = "0.40.1", default-features = false, features = ["native"] }
bp-bridge-hub-polkadot = { path = "./chains/chain-bridge-hub-polkadot" }
bp-header-chain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-messages = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-parachains = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-polkadot = { path = "./chains/chain-polkadot" }
bp-polkadot-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-kusama = { path = "./chains/chain-kusama" }
bp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bridge-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
relay-substrate-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-westend = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
relay-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-polkadot-bulletin = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-bridge-hub-kusama = { path = "./chains/chain-bridge-hub-kusama" }
bp-asset-hub-rococo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-asset-hub-westend = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-bridge-hub-rococo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-rococo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-bridge-hub-westend = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master"}
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master"}
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master"}
bp-bridge-hub-cumulus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master"}
anyhow = "1.0"
async-std = "1.13.2"
async-trait = "0.1.89"
env_logger = "0.11"
futures = "0.3.31"
hex = "0.4"
num-format = "0.4"
num-traits = "0.2"
rbtag = "0.3"
structopt = "0.3"
signal-hook = "0.3.18"
signal-hook-async-std = "0.3.0"
strum = { version = "0.27.2", features = ["derive"] }
pallet-bridge-parachains = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
parachains-relay = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
relay-asset-hub-rococo-client = { path = "./relay-clients/client-asset-hub-rococo" }
relay-asset-hub-westend-client = { path = "./relay-clients/client-asset-hub-westend" }
relay-bridge-hub-kusama-client = { path = "./relay-clients/client-bridge-hub-kusama" }
relay-bridge-hub-polkadot-client = { path = "./relay-clients/client-bridge-hub-polkadot" }
relay-bridge-hub-rococo-client = { path = "./relay-clients/client-bridge-hub-rococo" }
relay-bridge-hub-westend-client = { path = "./relay-clients/client-bridge-hub-westend" }
relay-kusama-client = { path = "./relay-clients/client-kusama" }
relay-polkadot-client = { path = "./relay-clients/client-polkadot" }
relay-polkadot-bulletin-client = { path = "./relay-clients/client-polkadot-bulletin" }
relay-rococo-client = { path = "./relay-clients/client-rococo" }
relay-westend-client = { path = "./relay-clients/client-westend" }
substrate-relay-helper = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
hex-literal = "1.1"
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
tempfile = "3.23"
finality-grandpa = { version = "0.16.2" }
