[package]
name = "substrate-relay"
version = "1.7.1"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
async-std = "1.13.0"
async-trait = "0.1.83"
codec = { package = "parity-scale-codec", version = "3.6.1" }
env_logger = "0.11"
futures = "0.3.31"
hex = "0.4"
log = { workspace = true }
num-format = "0.4"
num-traits = "0.2"
rbtag = "0.3"
structopt = "0.3"
signal-hook = "0.3.15"
signal-hook-async-std = "0.2.2"
strum = { version = "0.26.3", features = ["derive"] }

# Bridge dependencies
bp-bridge-hub-polkadot = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-bridge-hub-rococo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-header-chain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-messages = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-parachains = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-polkadot-bulletin = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-polkadot = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-polkadot-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-rococo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
bridge-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
pallet-bridge-parachains = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
parachains-relay = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
relay-bridge-hub-kusama-client = { path = "../relay-clients/client-bridge-hub-kusama" }
relay-bridge-hub-polkadot-client = { path = "../relay-clients/client-bridge-hub-polkadot" }
relay-bridge-hub-rococo-client = { path = "../relay-clients/client-bridge-hub-rococo" }
relay-bridge-hub-westend-client = { path = "../relay-clients/client-bridge-hub-westend" }
relay-kusama-client = { path = "../relay-clients/client-kusama" }
relay-polkadot-client = { path = "../relay-clients/client-polkadot" }
relay-polkadot-bulletin-client = { path = "../relay-clients/client-polkadot-bulletin" }
relay-rococo-client = { path = "../relay-clients/client-rococo" }
relay-substrate-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
relay-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
relay-westend-client = { path = "../relay-clients/client-westend" }
substrate-relay-helper = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

# Substrate Dependencies

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

[dev-dependencies]
bp-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
hex-literal = "0.4"
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
tempfile = "3.13"
finality-grandpa = { version = "0.16.2" }
