[package]
name = "substrate-relay"
version = "1.8.16"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
codec = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
num-format = { workspace = true }
num-traits = { workspace = true }
rbtag = { workspace = true }
signal-hook = { workspace = true }
signal-hook-async-std = { workspace = true }
strum = { workspace = true }

# Bridge dependencies
bp-bridge-hub-polkadot = { workspace = true }
bp-bridge-hub-rococo = { workspace = true }
bp-header-chain = { workspace = true }
bp-messages = { workspace = true }
bp-parachains = { workspace = true }
bp-polkadot-bulletin = { workspace = true }
bp-polkadot = { workspace = true }
bp-polkadot-core = { workspace = true }
bp-rococo = { workspace = true }
bp-runtime = { workspace = true }
bridge-runtime-common = { workspace = true }
pallet-bridge-parachains = { workspace = true }
parachains-relay = { workspace = true }
relay-asset-hub-rococo-client = { workspace = true }
relay-asset-hub-westend-client = { workspace = true }
relay-bridge-hub-kusama-client = { workspace = true }
relay-bridge-hub-polkadot-client = { workspace = true }
relay-bridge-hub-rococo-client = { workspace = true }
relay-bridge-hub-westend-client = { workspace = true }
relay-kusama-client = { workspace = true }
relay-polkadot-client = { workspace = true }
relay-polkadot-bulletin-client = { workspace = true }
relay-rococo-client = { workspace = true }
relay-substrate-client = { workspace = true }
relay-utils = { workspace = true }
relay-westend-client = { workspace = true }
substrate-relay-helper = { workspace = true }

# Substrate Dependencies

frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
tempfile = { workspace = true }
finality-grandpa = { workspace = true }
