[package]
name = "bp-bridge-hub-kusama"
description = "Primitives of BridgeHubKusama parachain runtime."
version = "0.6.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Bridge Dependencies

bp-bridge-hub-cumulus = { git = "https://github.com/paritytech/polkadot-sdk.git", branch="master"}
bp-messages = { git = "https://github.com/paritytech/polkadot-sdk.git", branch="master"}
bp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch="master"}

# Substrate Based Dependencies

frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch="master"}
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch="master"}
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch="master"}
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", branch="master"}

[features]
default = ["std"]
std = [
	"bp-bridge-hub-cumulus/std",
	"bp-messages/std",
	"bp-runtime/std",
	"frame-support/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
]
