[package]
name = "bp-kusama"
description = "Primitives of Kusama runtime."
version = "0.5.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true

[package.metadata.polkadot-sdk]
exclude-from-umbrella = true

[lints]
workspace = true

[dependencies]

# Bridge Dependencies

bp-header-chain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch="master"}
bp-polkadot-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch="master"}
bp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch="master"}

# Substrate Based Dependencies

frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch="master"}
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch="master"}
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", branch="master"}

[features]
default = ["std"]
std = [
	"bp-header-chain/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"frame-support/std",
	"sp-api/std",
	"sp-std/std",
]
