[package]
name = "pallet-bridge-currency-exchange"
description = "A Substrate Runtime module that accepts 'lock funds' transactions from a peer chain and grants an equivalent amount to a the appropriate Substrate account."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
sp-currency-exchange = { path = "../../primitives/currency-exchange", default-features = false }

# Substrate Based Dependencies
[dependencies.frame-support]
version = "2.0.0-alpha.6"
default-features = false
rev = "c13ad41634d0bd7cf07897c2aa062b917d520520"
git = "https://github.com/paritytech/substrate/"

[dependencies.frame-system]
version = "2.0.0-alpha.6"
default-features = false
rev = "c13ad41634d0bd7cf07897c2aa062b917d520520"
git = "https://github.com/paritytech/substrate/"

[dependencies.sp-std]
version = "2.0.0-alpha.6"
default-features = false
rev = "c13ad41634d0bd7cf07897c2aa062b917d520520"
git = "https://github.com/paritytech/substrate/"

[dependencies.sp-runtime]
version = "2.0.0-alpha.6"
default-features = false
rev = "c13ad41634d0bd7cf07897c2aa062b917d520520"
git = "https://github.com/paritytech/substrate/"

[dev-dependencies.sp-core]
version = "2.0.0-alpha.6"
rev = "c13ad41634d0bd7cf07897c2aa062b917d520520"
git = "https://github.com/paritytech/substrate/"

[dev-dependencies.sp-io]
version = "2.0.0-alpha.6"
rev = "c13ad41634d0bd7cf07897c2aa062b917d520520"
git = "https://github.com/paritytech/substrate/"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-currency-exchange/std",
]
