[package]
name = "header-chain"
description = "A common interface for describing what a bridge pallet should be able to do."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
# TODO: I'm pretty sure this should _just_ be GPL3
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies.frame-support]
version = "2.0.0-rc5"
tag = 'v2.0.0-rc5'
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.sp-std]
version = "2.0.0-rc5"
tag = 'v2.0.0-rc5'
default-features = false
git = "https://github.com/paritytech/substrate/"

[features]
default = ["std"]
std = [
	"frame-support/std",
	"sp-std/std",
]
