[package]
name = "pallet-substrate-bridge"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bp-header-chain = { path = "../../primitives/header-chain", default-features = false }
serde = { version = "1.0", optional = true }
hash-db = { version = "0.15.2", default-features = false }

# Substrate Based Dependencies

[dependencies.sp-std]
version = "2.0.0-rc5"
tag = 'v2.0.0-rc5'
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.frame-support]
version = "2.0.0-rc5"
tag = 'v2.0.0-rc5'
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.frame-system]
version = "2.0.0-rc5"
tag = 'v2.0.0-rc5'
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.sp-finality-grandpa]
version = "2.0.0-rc5"
tag = 'v2.0.0-rc5'
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-runtime]
version = "2.0.0-rc5"
tag = 'v2.0.0-rc5'
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.sp-trie]
version = "2.0.0-rc5"
tag = 'v2.0.0-rc5'
default-features = false
git = "https://github.com/paritytech/substrate/"

[dependencies.parity-scale-codec]
version = "1.3.1"
default-features = false
features = ["derive"]


[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"serde",
	"sp-finality-grandpa/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-trie/std",
]
